visuals working and ready to plot any polytope, path and configuration

--- a/qp_iterative.ipynb
+++ b/qp_iterative.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,15 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7002\n",
-      "INFO:drake:Meshcat listening for connections at http://localhost:7003\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7002\n"
      ]
     },
     {
@@ -95,7 +94,7 @@
      "output_type": "stream",
      "text": [
       "4\n",
-      "Visualisations won't work. Can't visualize the TC-Space of plants with more than 3-DOF\n"
+      "Visualisations won't work properly. Can't visualize the TC-Space of plants with more than 3-DOF. The first 3 DOF from the plant will be visualized\n"
      ]
     }
    ],
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -458,71 +457,26 @@
       "No solution for 1 grasps\n",
       "No solution for 2 grasps\n",
       "No solution for 3 grasps\n",
-      "No solution for 4 grasps\n",
-      "No solution for 5 grasps\n",
-      "No solution for 6 grasps\n",
-      "No solution for 7 grasps\n",
-      "No solution for 8 grasps\n",
-      "No solution for 9 grasps\n",
-      "No solution for 10 grasps\n",
-      "No solution for 11 grasps\n",
-      "No solution for 12 grasps\n",
-      "Solution for 13 grasps\n",
+      "Solution for 4 grasps\n",
       "[[-3.14000000e+00 -1.00000000e-01 -5.40000000e-02]\n",
-      " [-3.14000000e+00 -5.00000000e-01 -2.50000000e-02]\n",
-      " [-2.65691625e+00 -1.69162477e-02 -2.50000000e-02]\n",
-      " [-2.65691625e+00 -4.98580139e-01 -2.50000000e-02]\n",
-      " [-2.17383541e+00 -1.54993010e-02 -2.50000000e-02]\n",
-      " [-2.17383541e+00 -4.97163706e-01 -2.50000000e-02]\n",
-      " [-1.69075700e+00 -1.40852985e-02 -2.50000000e-02]\n",
-      " [-1.69075700e+00 -4.95750215e-01 -2.50000000e-02]\n",
-      " [-1.20768054e+00 -1.26737530e-02 -2.50000000e-02]\n",
-      " [-1.20768054e+00 -4.94339178e-01 -2.50000000e-02]\n",
-      " [-7.24605540e-01 -1.12641771e-02 -2.50000000e-02]\n",
-      " [-7.24605540e-01 -4.92930107e-01 -2.50000000e-02]\n",
-      " [-2.41531516e-01 -9.85608352e-03 -2.50000000e-02]\n",
-      " [-2.41531516e-01 -4.91522517e-01 -2.50000000e-02]\n",
-      " [ 2.41542016e-01 -8.44898492e-03 -2.50000000e-02]\n",
-      " [ 2.41542016e-01 -4.90115918e-01 -2.50000000e-02]\n",
-      " [ 7.24615539e-01 -7.04239404e-03 -2.50000000e-02]\n",
-      " [ 7.24615539e-01 -4.88709824e-01 -2.50000000e-02]\n",
-      " [ 1.20768954e+00 -5.63582357e-03 -2.50000000e-02]\n",
-      " [ 1.20768954e+00 -4.87303748e-01 -2.50000000e-02]\n",
-      " [ 1.69076450e+00 -4.22878623e-03 -2.50000000e-02]\n",
-      " [ 1.69076450e+00 -4.85897202e-01 -2.50000000e-02]\n",
-      " [ 2.17384091e+00 -2.82079472e-03 -2.50000000e-02]\n",
-      " [ 2.17384091e+00 -4.84489700e-01 -2.50000000e-02]\n",
-      " [ 2.65691925e+00 -1.41136175e-03 -2.50000000e-02]\n",
-      " [ 2.65691925e+00 -4.83080752e-01 -2.50000000e-02]\n",
-      " [ 3.14000000e+00  1.08877435e-18 -2.50000000e-02]\n",
+      " [-3.14000000e+00 -1.00000000e+00 -2.50000000e-02]\n",
+      " [-1.56999914e+00  5.70000857e-01 -2.50000000e-02]\n",
+      " [-1.56999914e+00 -8.56665762e-01 -2.50000000e-02]\n",
+      " [ 2.00604495e-13  7.13333381e-01 -2.50000000e-02]\n",
+      " [ 2.00271428e-13 -7.13333381e-01 -2.50000000e-02]\n",
+      " [ 1.56999914e+00  8.56665762e-01 -2.50000000e-02]\n",
+      " [ 1.56999914e+00 -5.70000857e-01 -2.50000000e-02]\n",
+      " [ 3.14000000e+00  1.00000000e+00 -2.50000000e-02]\n",
       " [ 3.14000000e+00 -4.00000000e-01 -5.40000000e-02]]\n",
-      "From\t[-3.14, -0.10, -0.05]\tto\t[-3.14, -0.50, -0.03]\n",
-      "From\t[-3.14, -0.50, -0.03]\tto\t[-2.66, -0.02, -0.03]\n",
-      "From\t[-2.66, -0.02, -0.03]\tto\t[-2.66, -0.50, -0.03]\n",
-      "From\t[-2.66, -0.50, -0.03]\tto\t[-2.17, -0.02, -0.03]\n",
-      "From\t[-2.17, -0.02, -0.03]\tto\t[-2.17, -0.50, -0.03]\n",
-      "From\t[-2.17, -0.50, -0.03]\tto\t[-1.69, -0.01, -0.03]\n",
-      "From\t[-1.69, -0.01, -0.03]\tto\t[-1.69, -0.50, -0.03]\n",
-      "From\t[-1.69, -0.50, -0.03]\tto\t[-1.21, -0.01, -0.03]\n",
-      "From\t[-1.21, -0.01, -0.03]\tto\t[-1.21, -0.49, -0.03]\n",
-      "From\t[-1.21, -0.49, -0.03]\tto\t[-0.72, -0.01, -0.03]\n",
-      "From\t[-0.72, -0.01, -0.03]\tto\t[-0.72, -0.49, -0.03]\n",
-      "From\t[-0.72, -0.49, -0.03]\tto\t[-0.24, -0.01, -0.03]\n",
-      "From\t[-0.24, -0.01, -0.03]\tto\t[-0.24, -0.49, -0.03]\n",
-      "From\t[-0.24, -0.49, -0.03]\tto\t[0.24, -0.01, -0.03]\n",
-      "From\t[0.24, -0.01, -0.03]\tto\t[0.24, -0.49, -0.03]\n",
-      "From\t[0.24, -0.49, -0.03]\tto\t[0.72, -0.01, -0.03]\n",
-      "From\t[0.72, -0.01, -0.03]\tto\t[0.72, -0.49, -0.03]\n",
-      "From\t[0.72, -0.49, -0.03]\tto\t[1.21, -0.01, -0.03]\n",
-      "From\t[1.21, -0.01, -0.03]\tto\t[1.21, -0.49, -0.03]\n",
-      "From\t[1.21, -0.49, -0.03]\tto\t[1.69, -0.00, -0.03]\n",
-      "From\t[1.69, -0.00, -0.03]\tto\t[1.69, -0.49, -0.03]\n",
-      "From\t[1.69, -0.49, -0.03]\tto\t[2.17, -0.00, -0.03]\n",
-      "From\t[2.17, -0.00, -0.03]\tto\t[2.17, -0.48, -0.03]\n",
-      "From\t[2.17, -0.48, -0.03]\tto\t[2.66, -0.00, -0.03]\n",
-      "From\t[2.66, -0.00, -0.03]\tto\t[2.66, -0.48, -0.03]\n",
-      "From\t[2.66, -0.48, -0.03]\tto\t[3.14, 0.00, -0.03]\n",
-      "From\t[3.14, 0.00, -0.03]\tto\t[3.14, -0.40, -0.05]\n"
+      "From\t[-3.14, -0.10, -0.05]\tto\t[-3.14, -1.00, -0.03]\n",
+      "From\t[-3.14, -1.00, -0.03]\tto\t[-1.57, 0.57, -0.03]\n",
+      "From\t[-1.57, 0.57, -0.03]\tto\t[-1.57, -0.86, -0.03]\n",
+      "From\t[-1.57, -0.86, -0.03]\tto\t[0.00, 0.71, -0.03]\n",
+      "From\t[0.00, 0.71, -0.03]\tto\t[0.00, -0.71, -0.03]\n",
+      "From\t[0.00, -0.71, -0.03]\tto\t[1.57, 0.86, -0.03]\n",
+      "From\t[1.57, 0.86, -0.03]\tto\t[1.57, -0.57, -0.03]\n",
+      "From\t[1.57, -0.57, -0.03]\tto\t[3.14, 1.00, -0.03]\n",
+      "From\t[3.14, 1.00, -0.03]\tto\t[3.14, -0.40, -0.05]\n"
      ]
     }
    ],
@@ -531,8 +485,8 @@
     "x_goal = np.array([3.14, -0.4, -0.054])\n",
     "\n",
     "# Define the 8 corner points of the convex hull\n",
-    "x_bounds = [-np.pi, np.pi] # Bottle cap\n",
-    "y_bounds = [-0.5, 0] # Gripper wrist\n",
+    "x_bounds = [-3.14, 3.14] # Bottle cap\n",
+    "y_bounds = [-1, 1] # Gripper wrist\n",
     "z_bounds = [-0.055, -0.025] # Gripper finger\n",
     "\n",
     "lower_joint_limits = np.array([x_bounds[0], y_bounds[0], z_bounds[0]])\n",
@@ -567,19 +521,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimal solution: [-0.00000000e+00 -2.35589546e-09  1.50000001e+00 -2.13037052e-09\n",
-      "  1.50000000e+00 -1.90463514e-09  1.50000000e+00  7.00016941e-02\n",
-      "  1.42999830e+00  4.91043909e-01  8.31047294e-01  0.00000000e+00] [-3.1        -3.1        -1.59999999 -1.59999999 -0.09999999 -0.09999999\n",
-      "  1.40000001  1.40000001  2.75999661  2.75999661  3.1         3.1       ]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -590,6 +534,16 @@
       "  warnings.warn(\"Argument subj in putclist: Incorrect array format causing data to be copied\");\n",
       "/usr/local/lib/python3.10/dist-packages/mosek/__init__.py:18349: UserWarning: Argument sub in putconboundlist: Incorrect array format causing data to be copied\n",
       "  warnings.warn(\"Argument sub in putconboundlist: Incorrect array format causing data to be copied\");\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal solution: [-0.00000000e+00 -2.35589546e-09  1.50000001e+00 -2.13037052e-09\n",
+      "  1.50000000e+00 -1.90463514e-09  1.50000000e+00  7.00016941e-02\n",
+      "  1.42999830e+00  4.91043909e-01  8.31047294e-01  0.00000000e+00] [-3.1        -3.1        -1.59999999 -1.59999999 -0.09999999 -0.09999999\n",
+      "  1.40000001  1.40000001  2.75999661  2.75999661  3.1         3.1       ]\n"
      ]
     }
    ],
@@ -657,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +712,7 @@
      "text": [
       "solving using cvxpy\n",
       "Solution for 13 grasps\n",
-      "CVXPY time: 2.2314178943634033\n",
+      "CVXPY time: 2.749732255935669\n",
       "[[-3.14000000e+00 -5.00000000e-01 -5.40000000e-02]\n",
       " [-3.14000000e+00 -5.00000003e-01 -2.50000000e-02]\n",
       " [-2.63999996e+00  3.53749061e-08 -2.50000000e-02]\n",
@@ -789,7 +743,7 @@
       " [ 3.14000000e+00  0.00000000e+00 -5.40000000e-02]]\n",
       "solving using quadprog\n",
       "Solution for 20 grasps\n",
-      "Quadprog time: 0.018509864807128906\n",
+      "Quadprog time: 0.022979736328125\n",
       "[[-3.14000000e+00 -1.00000000e-01 -5.40000000e-02]\n",
       " [-3.14000000e+00 -4.13328292e-01 -2.50000000e-02]\n",
       " [-2.82598866e+00 -9.93169493e-02 -2.50000000e-02]\n",
