got full pipeline working without connected components and certificates of non-collision

--- a/qp_iterative.ipynb
+++ b/qp_iterative.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -455,34 +455,24 @@
      "text": [
       "No solution for 0 grasps\n",
       "No solution for 1 grasps\n",
-      "No solution for 2 grasps\n",
-      "No solution for 3 grasps\n",
-      "Solution for 4 grasps\n",
-      "[[-3.14000000e+00 -1.00000000e-01 -5.40000000e-02]\n",
-      " [-3.14000000e+00 -1.00000000e+00 -2.50000000e-02]\n",
-      " [-1.56999914e+00  5.70000857e-01 -2.50000000e-02]\n",
-      " [-1.56999914e+00 -8.56665762e-01 -2.50000000e-02]\n",
-      " [ 2.00604495e-13  7.13333381e-01 -2.50000000e-02]\n",
-      " [ 2.00271428e-13 -7.13333381e-01 -2.50000000e-02]\n",
-      " [ 1.56999914e+00  8.56665762e-01 -2.50000000e-02]\n",
-      " [ 1.56999914e+00 -5.70000857e-01 -2.50000000e-02]\n",
-      " [ 3.14000000e+00  1.00000000e+00 -2.50000000e-02]\n",
-      " [ 3.14000000e+00 -4.00000000e-01 -5.40000000e-02]]\n",
-      "From\t[-3.14, -0.10, -0.05]\tto\t[-3.14, -1.00, -0.03]\n",
-      "From\t[-3.14, -1.00, -0.03]\tto\t[-1.57, 0.57, -0.03]\n",
-      "From\t[-1.57, 0.57, -0.03]\tto\t[-1.57, -0.86, -0.03]\n",
-      "From\t[-1.57, -0.86, -0.03]\tto\t[0.00, 0.71, -0.03]\n",
-      "From\t[0.00, 0.71, -0.03]\tto\t[0.00, -0.71, -0.03]\n",
-      "From\t[0.00, -0.71, -0.03]\tto\t[1.57, 0.86, -0.03]\n",
-      "From\t[1.57, 0.86, -0.03]\tto\t[1.57, -0.57, -0.03]\n",
-      "From\t[1.57, -0.57, -0.03]\tto\t[3.14, 1.00, -0.03]\n",
-      "From\t[3.14, 1.00, -0.03]\tto\t[3.14, -0.40, -0.05]\n"
+      "Solution for 2 grasps\n",
+      "[[-3.    -0.1   -0.054]\n",
+      " [-3.    -1.    -0.025]\n",
+      " [-1.     1.    -0.025]\n",
+      " [-1.    -1.    -0.025]\n",
+      " [ 1.     1.    -0.025]\n",
+      " [ 1.    -0.4   -0.054]]\n",
+      "From\t[-3.00, -0.10, -0.05]\tto\t[-3.00, -1.00, -0.03]\n",
+      "From\t[-3.00, -1.00, -0.03]\tto\t[-1.00, 1.00, -0.03]\n",
+      "From\t[-1.00, 1.00, -0.03]\tto\t[-1.00, -1.00, -0.03]\n",
+      "From\t[-1.00, -1.00, -0.03]\tto\t[1.00, 1.00, -0.03]\n",
+      "From\t[1.00, 1.00, -0.03]\tto\t[1.00, -0.40, -0.05]\n"
      ]
     }
    ],
    "source": [
-    "x_init = np.array([-3.14, -0.1, -0.054])\n",
-    "x_goal = np.array([3.14, -0.4, -0.054])\n",
+    "x_init = np.array([-3., -0.1, -0.054])\n",
+    "x_goal = np.array([1., -0.4, -0.054])\n",
     "\n",
     "# Define the 8 corner points of the convex hull\n",
     "x_bounds = [-3.14, 3.14] # Bottle cap\n",
