Final version, all working

--- a/manipulation_planner_4dof.ipynb
+++ b/manipulation_planner_4dof.ipynb
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7002\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7001\n"
      ]
     },
     {
@@ -152,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22bf64b521294b1a806fa206b8cb0e85",
+       "model_id": "4a50eb20aa9645c5aeb7d6aa75278689",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +172,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95188c637e654e4d83c1ed6e7c1186a8",
+       "model_id": "df017f04deaf4da2bc377c23a50a491b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46ab961eb1b34f63815054e326247c06",
+       "model_id": "b020642834de4055a098276760c85045",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af39ba13529441b2ac2c3778b317b732",
+       "model_id": "1ce1d529aee54a698b7542d737d6717c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,13 +254,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the 8 corner points of the convex hull\n",
     "x_bounds = [-3.14, 3.14]\n",
-    "y_bounds = [-1, 1]\n",
+    "y_bounds = [-1., 1.]\n",
     "z_bounds = [-0.055, -0.024]\n",
     "\n",
     "z2_bounds = [0.024, 0.055]\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
     "        self.max_grasps = max_grasps\n",
     "    \n",
     "    \n",
-    "    def compute_trajectory(self, x_init, x_goal, display=True):\n",
+    "    def compute_trajectory(self, x_init, x_goal, display=False):\n",
     "        print(\"Finding path for minimum grasps\")\n",
     "        path = self._find_minimum_grasp_path(\n",
     "                x_init = x_init,\n",
@@ -428,7 +428,7 @@
     "        for i in range(self.max_grasps):\n",
     "            if i % 10 == 0 and i > 0:\n",
     "                print(f\"Trying with {i} grasps\")\n",
-    "                \n",
+    "            \n",
     "            path = self._solve_for_n_grasps_CC(\n",
     "                i,\n",
     "                x_init,\n",
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -760,10 +760,24 @@
      "output_type": "stream",
      "text": [
       "Finding path for minimum grasps\n",
-      "Found a solution with 6 grasps\n",
+      "1.5722951889038086 time for 0 grasps\n",
+      "1.6300725936889648 time for 1 grasps\n",
+      "1.7874112129211426 time for 2 grasps\n",
+      "1.548675775527954 time for 3 grasps\n",
+      "1.7121033668518066 time for 4 grasps\n",
+      "1.7071611881256104 time for 5 grasps\n",
+      "2.158466100692749 time for 6 grasps\n",
+      "1.8633251190185547 time for 7 grasps\n",
+      "1.6922965049743652 time for 8 grasps\n",
+      "1.8325588703155518 time for 9 grasps\n",
+      "Trying with 10 grasps\n",
+      "1.8193767070770264 time for 10 grasps\n",
+      "1.9477794170379639 time for 11 grasps\n",
+      "Found a solution with 11 grasps\n",
+      "Time taken for grasps: [1.5722951889038086, 1.6300725936889648, 1.7874112129211426, 1.548675775527954, 1.7121033668518066, 1.7071611881256104, 2.158466100692749, 1.8633251190185547, 1.6922965049743652, 1.8325588703155518, 1.8193767070770264, 1.9477794170379639] seconds\n",
       "Path found. Generating trajectory\n",
       "Generating trajectory from:\n",
-      "From\t[-3.14 -0.78 -0.03  0.03]\tto\t[-3.14        0.38912427 -0.025       0.02499959]\n"
+      "From\t[-3.14  -0.78  -0.025  0.055]\tto\t[-3.14        0.38912424 -0.02500001  0.02499992]\n"
      ]
     },
     {
@@ -780,7 +794,7 @@
      "output_type": "stream",
      "text": [
       "result.is_success() = True\n",
-      "From\t[-3.14        0.38912427 -0.025       0.02499959]\tto\t[-2.55167775  0.97744649 -0.02497185  0.02494312]\n"
+      "From\t[-3.14        0.38912424 -0.02500001  0.02499992]\tto\t[-2.53357696  0.99554726 -0.02495472  0.02491546]\n"
      ]
     },
     {
@@ -797,41 +811,7 @@
      "output_type": "stream",
      "text": [
       "result.is_success() = True\n",
-      "From\t[-2.55167775  0.97744649 -0.02497185  0.02494312]\tto\t[-2.55167775  0.38922825 -0.02498622  0.02490596]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
-      "INFO:drake:Found 5 unique paths, discarded 0 duplicate paths.\n",
-      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "result.is_success() = True\n",
-      "From\t[-2.55167775  0.38922825 -0.02498622  0.02490596]\tto\t[-1.96337737  0.97752863 -0.02496534  0.02488023]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
-      "INFO:drake:Found 5 unique paths, discarded 4 duplicate paths.\n",
-      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "result.is_success() = True\n",
-      "From\t[-1.96337737  0.97752863 -0.02496534  0.02488023]\tto\t[-1.96337737  0.3892718  -0.0249795   0.0248639 ]\n"
+      "From\t[-2.53357696  0.99554726 -0.02495472  0.02491546]\tto\t[-2.53357696  0.38937631 -0.02497541  0.02486332]\n"
      ]
     },
     {
@@ -848,7 +828,7 @@
      "output_type": "stream",
      "text": [
       "result.is_success() = True\n",
-      "From\t[-1.96337737  0.3892718  -0.0249795   0.0248639 ]\tto\t[-1.37509282  0.97755634 -0.02496295  0.02485556]\n"
+      "From\t[-2.53357696  0.38937631 -0.02497541  0.02486332]\tto\t[-1.92718658  0.99576668 -0.02494045  0.02482831]\n"
      ]
     },
     {
@@ -865,7 +845,7 @@
      "output_type": "stream",
      "text": [
       "result.is_success() = True\n",
-      "From\t[-1.37509282  0.97755634 -0.02496295  0.02485556]\tto\t[-1.37509282  0.38927173 -0.02497945  0.02485519]\n"
+      "From\t[-1.92718658  0.99576668 -0.02494045  0.02482831]\tto\t[-1.92718658  0.38953455 -0.02495611  0.02480586]\n"
      ]
     },
     {
@@ -882,7 +862,7 @@
      "output_type": "stream",
      "text": [
       "result.is_success() = True\n",
-      "From\t[-1.37509282  0.38927173 -0.02497945  0.02485519]\tto\t[-0.78682357  0.97754098 -0.02496533  0.02486241]\n"
+      "From\t[-1.92718658  0.38953455 -0.02495611  0.02480586]\tto\t[-1.32081606  0.99590507 -0.02492847  0.02478798]\n"
      ]
     },
     {
@@ -899,7 +879,7 @@
      "output_type": "stream",
      "text": [
       "result.is_success() = True\n",
-      "From\t[-0.78682357  0.97754098 -0.02496533  0.02486241]\tto\t[-0.78682357  0.38922853 -0.02498631  0.02487804]\n"
+      "From\t[-1.32081606  0.99590507 -0.02492847  0.02478798]\tto\t[-1.32081606  0.38963699 -0.02494345  0.02477805]\n"
      ]
     },
     {
@@ -916,7 +896,41 @@
      "output_type": "stream",
      "text": [
       "result.is_success() = True\n",
-      "From\t[-0.78682357  0.38922853 -0.02498631  0.02487804]\tto\t[-0.1985746   0.9774775  -0.02497187  0.02490286]\n"
+      "From\t[-1.32081606  0.38963699 -0.02494345  0.02477805]\tto\t[-0.71446131  0.99599174 -0.02492085  0.02476921]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 4 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[-0.71446131  0.99599174 -0.02492085  0.02476921]\tto\t[-0.71446131  0.38969464 -0.02493691  0.02476694]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 1 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[-0.71446131  0.38969464 -0.02493691  0.02476694]\tto\t[-0.10812054  0.9960354  -0.02491747  0.02476458]\n"
      ]
     },
     {
@@ -933,7 +947,7 @@
      "output_type": "stream",
      "text": [
       "result.is_success() = True\n",
-      "From\t[-0.1985746   0.9774775  -0.02497187  0.02490286]\tto\t[-0.1985746   0.38912609 -0.025       0.02493925]\n"
+      "From\t[-0.10812054  0.9960354  -0.02491747  0.02476458]\tto\t[-0.10812054  0.38971165 -0.02493508  0.02476834]\n"
      ]
     },
     {
@@ -950,7 +964,41 @@
      "output_type": "stream",
      "text": [
       "result.is_success() = True\n",
-      "From\t[-0.1985746   0.38912609 -0.025       0.02493925]\tto\t[ 0.          0.58770068 -0.02499961  0.02499961]\n"
+      "From\t[-0.10812054  0.38971165 -0.02493508  0.02476834]\tto\t[ 0.49820715  0.99603934 -0.02491762  0.0247696 ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 3 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[ 0.49820715  0.99603934 -0.02491762  0.0247696 ]\tto\t[ 0.49820715  0.38968956 -0.02493728  0.02477716]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 1 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[ 0.49820715  0.38968956 -0.02493728  0.02477716]\tto\t[ 1.10452208  0.99600449 -0.02492122  0.02478078]\n"
      ]
     },
     {
@@ -967,7 +1015,143 @@
      "output_type": "stream",
      "text": [
       "result.is_success() = True\n",
-      "From\t[ 0.          0.58770068 -0.02499961  0.02499961]\tto\t[ 0.   -0.78 -0.03  0.03]\n"
+      "From\t[ 1.10452208  0.99600449 -0.02492122  0.02478078]\tto\t[ 1.10452208  0.38962811 -0.02494399  0.02479148]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 1 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[ 1.10452208  0.38962811 -0.02494399  0.02479148]\tto\t[ 1.71082374  0.99592976 -0.02492895  0.02479802]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 3 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[ 1.71082374  0.99592976 -0.02492895  0.02479802]\tto\t[ 1.71082374  0.38952453 -0.02495683  0.02481317]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 1 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[ 1.71082374  0.38952453 -0.02495683  0.02481317]\tto\t[ 2.31710938  0.99581017 -0.02494091  0.02482394]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 4 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[ 2.31710938  0.99581017 -0.02494091  0.02482394]\tto\t[ 2.31710938  0.38936925 -0.02497603  0.02484606]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 1 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[ 2.31710938  0.38936925 -0.02497603  0.02484606]\tto\t[ 2.92336789  0.99562777 -0.02495511  0.02487165]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 4 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[ 2.92336789  0.99562777 -0.02495511  0.02487165]\tto\t[ 2.92336789  0.38912804 -0.025       0.0249164 ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 1 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[ 2.92336789  0.38912804 -0.025       0.0249164 ]\tto\t[ 3.14        0.60576012 -0.02499957  0.02499986]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Solved GCS shortest path using Mosek with convex_relaxation=true and preprocessing=true and rounding.\n",
+      "INFO:drake:Found 5 unique paths, discarded 4 duplicate paths.\n",
+      "INFO:drake:Finished 5 rounding solutions with Mosek.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.is_success() = True\n",
+      "From\t[ 3.14        0.60576012 -0.02499957  0.02499986]\tto\t[ 3.14 -0.78 -0.03  0.04]\n"
      ]
     },
     {
@@ -989,14 +1173,24 @@
     }
    ],
    "source": [
-    "x_init = np.array([-3.14, -0.78, -0.03, 0.03])\n",
-    "x_goal = np.array([0, -0.78, -0.03, 0.03])\n",
+    "x_init = np.array([-3.14, -0.78, -0.025, 0.055])\n",
+    "x_goal = np.array([3.14, -0.78, -0.03, 0.04])\n",
     "path, traj = planner.compute_trajectory(x_init, x_goal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planner.plant.SetPositions(planner.plant_context, x_init)\n",
+    "planner.diagram.ForcedPublish(planner.diagram_context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
