--- a/summer-work/grasping_space.ipynb
+++ b/summer-work/grasping_space.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,8 +63,15 @@
     "plant = builder.plant()\n",
     "scene_graph = builder.scene_graph()\n",
     "parser = Parser(plant, scene_graph)\n",
-    "parser.SetAutoRenaming(True)\n",
-    "\n",
+    "parser.SetAutoRenaming(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Add the robot\n",
     "# gripper = parser.AddModels(file_name=\"../my_sdfs/wsg_2dof.sdf\")[0]\n",
     "\n",
@@ -89,28 +96,35 @@
     "    plant.GetFrameByName(\"panda_hand\", panda_hand),    # child  (C)\n",
     "    X_8H)\n",
     "\n",
-    "print(\"Setting defailt finger joint positions...\")\n",
+    "print(\"Setting default finger joint positions...\")\n",
     "\n",
     "# Optional: set the default finger opening (each finger is a prismatic joint).\n",
     "# 0.02 m on each finger → ~0.04 m total width. Adjust to taste.\n",
     "for j in [\"panda_finger_joint1\", \"panda_finger_joint2\"]:\n",
-    "    plant.GetJointByName(j, panda_hand).set_default_translation(0.02)\n",
-    "\n",
+    "    plant.GetJointByName(j, panda_hand).set_default_translation(0.02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"Adding the bottle cap and obstacles...\")\n",
     "\n",
-    "# cap = parser.AddModels(file_name=\"../my_sdfs/bottle_cap.sdf\")[0]\n",
+    "cap = parser.AddModels(file_name=\"../my_sdfs/bottle_cap.sdf\")[0]\n",
     "# obstacle1 = parser.AddModels(\"../my_sdfs/obstacle.sdf\")[0]\n",
     "# # obstacle2 = parser.AddModels(\"my_sdfs/obstacle.sdf\")[0]\n",
     "# obstacle3 = parser.AddModels(\"../my_sdfs/obstacle.sdf\")[0]\n",
     "\n",
-    "# # Set welds\n",
-    "# plant.WeldFrames(\n",
-    "#     plant.world_frame(), \n",
-    "#     plant.GetFrameByName(\"base_link\", cap),\n",
-    "#     RigidTransform(RotationMatrix(), [0, 0, 0]))\n",
+    "# Set welds\n",
+    "plant.WeldFrames(\n",
+    "    plant.world_frame(), \n",
+    "    plant.GetFrameByName(\"base_link\", cap),\n",
+    "    RigidTransform(RotationMatrix(), [0.5, 0, 0]))\n",
     "\n",
     "# # Weld the obstacle to the world frame (adjust pose as needed)\n",
-    "# obstacle_pose1 = RigidTransform(RotationMatrix(), [0.01, 0.035, 0.02])  # Adjust position\n",
+    "# obstacle_pose1 = RigidTransform(RotationMatrix(), [0.51, 0.035, 0.02])  # Adjust position\n",
     "# plant.WeldFrames(\n",
     "#     plant.world_frame(),\n",
     "#     plant.GetFrameByName(\"obstacle_link\", obstacle1),\n",
@@ -122,15 +136,32 @@
     "# #     plant.GetFrameByName(\"obstacle_link\", obstacle2),\n",
     "# #     obstacle_pose2)\n",
     "\n",
-    "# obstacle_pose3 = RigidTransform(RotationMatrix(), [-0.035, -0.005, 0.02])  # Adjust position\n",
+    "# obstacle_pose3 = RigidTransform(RotationMatrix(), [0.465, -0.005, 0.02])  # Adjust position\n",
     "# plant.WeldFrames(\n",
     "#     plant.world_frame(),\n",
     "#     plant.GetFrameByName(\"obstacle_link\", obstacle3),\n",
-    "#     obstacle_pose3)\n",
+    "#     obstacle_pose3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Finalising plant...\")\n",
+    "print(\"Bodies:\", plant.num_bodies(), \"Joints:\", plant.num_joints())\n",
+    "\n",
     "\n",
     "plant.Finalize()\n",
     "\n",
-    "print(\"Plant finalized.\")\n",
+    "inspector = scene_graph.model_inspector()\n",
+    "num_frames = len(list(inspector.GetAllFrameIds()))\n",
+    "num_geoms = sum(inspector.NumGeometriesForFrame(fid) for fid in inspector.GetAllFrameIds())\n",
+    "print(\"Frames:\", num_frames, \"Geometries:\", num_geoms)\n",
+    "\n",
+    "\n",
+    "print(\"Plant finalised.\")\n",
     "\n",
     "print(\"Number of positions: \", plant.num_positions())\n",
     "\n",
@@ -138,7 +169,7 @@
     "q_star = np.zeros(plant.num_positions())\n",
     "\n",
     "\n",
-    "print(\"Initializing CspaceFreePolytope...\")\n",
+    "print(\"Initialising CspaceFreePolytope...\")\n",
     "\n",
     "# The object we will use to perform our certification\n",
     "cspace_free_polytope = CspaceFreePolytope(\n",
@@ -184,8 +215,8 @@
     "        value=0, step=step, \n",
     "        description=f\"q{i}\"))\n",
     "    \n",
-    "# q = np.zeros(plant.num_positions())\n",
-    "q = [-3.14, -0.78, -0.03]\n",
+    "q = np.zeros(plant.num_positions())\n",
+    "# q = [-3.14, -0.78, -0.03]\n",
     "def handle_slider_change(change, idx):\n",
     "    q[idx] = change['new']\n",
     "    # print(visualizer.check_collision_q_by_ik(q))\n",
@@ -200,11 +231,18 @@
     "for slider in sliders:\n",
     "    display(slider)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
