started with full implementation

--- a/summer-work/grasping_space.ipynb
+++ b/summer-work/grasping_space.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting up the plant and scene graph...\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 2: Set up the plant and scene graph, and initialize the CIrisPlantVisualizer\n",
     "# builder = DiagramBuilder()\n",
@@ -68,9 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Panda robot models...\n",
+      "Welding Panda arm and hand...\n",
+      "Setting default finger joint positions...\n"
+     ]
+    }
+   ],
    "source": [
     "# Add the robot\n",
     "# gripper = parser.AddModels(file_name=\"../my_sdfs/wsg_2dof.sdf\")[0]\n",
@@ -106,9 +124,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding the bottle cap and obstacles...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<WeldJoint name='world_welds_to_base_link' index=14 model_instance=4>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"Adding the bottle cap and obstacles...\")\n",
     "\n",
@@ -145,9 +181,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Meshcat listening for connections at http://localhost:7000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finalising plant...\n",
+      "Bodies: 16 Joints: 15\n",
+      "Frames: 16 Geometries: 90\n",
+      "Plant finalised.\n",
+      "Number of positions:  10\n",
+      "Initialising CspaceFreePolytope...\n",
+      "Initializing CIrisPlantVisualizer...\n",
+      "Visualisations won't work properly. Can't visualize the TC-Space of plants with more than 3-DOF. The first 3 DOF from the plant will be visualized\n",
+      "Setting up the visualizer...\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Finalising plant...\")\n",
     "print(\"Bodies:\", plant.num_bodies(), \"Joints:\", plant.num_joints())\n",
@@ -196,9 +255,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "28979267050b4b45aa16c6b2e8f6ab9d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q0', max=2.8973, min=-2.8973, step=0.057946)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1d22feb9ae8430dacb0030b6eccfa5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q1', max=1.7628, min=-1.7628, step=0.035255999999999996)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8fb1386cdff7425f959c05263d08d77b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q2', max=2.8973, min=-2.8973, step=0.057946)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e1c2b69a86dc4d7eaa4b39a7fd0a575c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=-0.0698, description='q3', max=-0.0698, min=-3.0718, step=0.03002)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98f81c78ce964edd99f78392446a253a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q4', max=2.8973, min=-2.8973, step=0.057946)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd2745af62f94264a57f2725d1c7b4dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q5', max=3.7525, min=-0.0175, step=0.0377)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ecf9e537cb2b4dcd9e7b12913abf305d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q6', max=2.8973, min=-2.8973, step=0.057946)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9af03fd804444399a9124fec03f70bc1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q7', max=0.0, min=-0.045, step=0.00045)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "78b076dddf1d4fc1bf08114dca2b2fa9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q8', max=0.045, step=0.00045)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13274d47a2a648a59f856630c5138214",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q9', max=3.14, min=-3.14, step=0.06280000000000001)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sliders = []\n",
     "\n",
@@ -233,16 +433,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get Grasping Configuration Through IK"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grasping Configuration checker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hand frame must be located at a certain height range from the cap (and rotation, so a transform), fingers at an offset (also a range) and allow full rotation of gripper hand and cap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate polytope with Iris-ZO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
